homeManagerModules/apps/waybar/style.css
/*
*
* Catppuccin Mocha palette
* Maintainer: rubyowo
*
*/

@define-color base   #1e1e2e;
@define-color mantle #181825;
@define-color crust  #11111b;

@define-color text     #cdd6f4;
@define-color subtext0 #a6adc8;
@define-color subtext1 #bac2de;

@define-color surface0 #313244;
@define-color surface1 #45475a;
@define-color surface2 #585b70;

@define-color overlay0 #6c7086;
@define-color overlay1 #7f849c;
@define-color overlay2 #9399b2;

@define-color blue      #89b4fa;
@define-color lavender  #b4befe;
@define-color sapphire  #74c7ec;
@define-color sky       #89dceb;
@define-color teal      #94e2d5;
@define-color green     #a6e3a1;
@define-color yellow    #f9e2af;
@define-color peach     #fab387;
@define-color maroon    #eba0ac;
@define-color red       #f38ba8;
@define-color mauve     #cba6f7;
@define-color pink      #f5c2e7;
@define-color flamingo  #f2cdcd;
@define-color rosewater #f5e0dc;

* {
    /* `otf-font-awesome` is required to be installed for icons */
    font-family: FontAwesome, Roboto, Helvetica, Arial, sans-serif;
    font-size: 13px;
}


window#waybar {
  background-color: #000000;
}

#workspaces {
  /* border-radius: 1rem; */
  /* background-color: @surface0; */
  /* margin-top: 1rem; */
  /* margin: 4px 4px 4px 4px; */
  /* padding: 0px 5px 0px 5px; */
}

#workspaces button {
  color: @text;
  /* border-radius: 1rem; */
  /* padding-left: 5px; */
  /* padding-right: 5px; */
  /* margin: 0px 0px 0px 0px; */
  /* box-shadow: inset 0 -3px transparent; */
  /* transition: all 0.5s cubic-bezier(.55,-0.68,.48,1.68); */
  /* background-color: transparent; */
}

#workspaces button.focused {
  color: @pink;
  /* border-radius: 1rem; */
}

#workspaces button:hover {
  color: @red;
  /* border-radius: 1rem; */
}

#tray,
#network,
#backlight,
#clock,
#battery,
#pulseaudio,
#custom-lock,
#custom-power {
  /* background-color: @surface0; */
  /* margin: 4px 4px 4px 4px; */
  padding: 0px 10px 0px 10px;
  /* border-radius: 1rem; */
}

#clock {
  color: @lavender;
}

#battery {
  color: @green;
}

#battery.charging {
  color: @green;
}

#battery.warning:not(.charging) {
  color: @red;
}

#network {
    color: @flamingo;
}

#backlight {
  color: @yellow;
}

#pulseaudio {
  color: @pink;
}

#pulseaudio.muted {
    color: @red;
}

#custom-power {
    color: @red;
}

/* #tray { */
/*   border-radius: 1rem; */
/* } */

tooltip {
    background: #000000;
}

tooltip label {
    color: @text;
}

